# GDPython

./: .gitignore  LICENSE  README.md  doku.md  exampleProject.py  game2.py  game3.py  pyproject.toml  setup.py  void_game_file.py
.github/ISSUE_TEMPLATE/: bug.md  epic.md  feature.md  request.md
gdpython/: __init__.py  core.py  game.py  objects.py
